--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "symfony/css-selector": "^4.4|^5.1|^6.4",
         "symfony/dependency-injection": "^4.4|^5.1|^6.4",
         "symfony/dom-crawler": "^4.4|^5.1|^6.4",
-        "symfony/http-client-contracts": "^1.1|^2.0",
+        "symfony/http-client-contracts": "^1.1|^2.0|^3.0",
         "symfony/http-foundation": "^4.4|^5.1|^6.4",
         "symfony/http-kernel": "^4.4|^5.1|^6.4",
         "symfony/service-contracts": "^1.1|^2.0",
