--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "symfony/http-client-contracts": "^1.1|^2.0|^3.0",
         "symfony/http-foundation": "^4.4|^5.1|^6.4",
         "symfony/http-kernel": "^4.4|^5.1|^6.4",
-        "symfony/service-contracts": "^1.1|^2.0",
+        "symfony/service-contracts": "^1.1|^2.0|^3.0",
         "symfony/string": "^5.3"
     },
     "require-dev": {
